fix(checkbox): style when line wraps

--- a/src/components/shared/renderers/checkbox-styles.scss
+++ b/src/components/shared/renderers/checkbox-styles.scss
@@ -11,6 +11,7 @@
     border-radius: 25%;
     box-sizing: content-box !important;
     cursor: pointer;
+    flex-shrink: 0;
     height: 1em;
     margin-right: 5px;
     width: 1em;
